finaly fixing the connecting and the reating of the table

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-POSTGRES_USER=aleksa
-POSTGRES_PASSWORD=aleksa
-POSTGRES_DB=telco_churn
+POSTGRES_USER=airflow
+POSTGRES_PASSWORD=airflow
+POSTGRES_DB=airflow
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 CSV_PATH=data/raw/Telco-Customer-Churn.csv
@@ -8,3 +8,5 @@ PARQUET_PATH=outputs/churn_data.parquet
 MODEL_PATH=outputs/model.joblib
 METRICS_PATH=outputs/metrics.json
 AIRFLOW_DAG_ID=churn_pipeline
+AIRFLOW_UID=50000
+AIRFLOW_SECRET_KEY=supersecretkey123
