--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 POSTGRES_USER=airflow
 POSTGRES_PASSWORD=airflow
-POSTGRES_DB=airflow
+POSTGRES_DB=telco_churn
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
-CSV_PATH=data/raw/Telco-Customer-Churn.csv
-PARQUET_PATH=outputs/churn_data.parquet
+CSV_PATH=/opt/airflow/data/raw/Telco-Customer-Churn.csv
+PARQUET_PATH=/opt/airflow/outputs/churn_data.parquet
 MODEL_PATH=outputs/model.joblib
 METRICS_PATH=outputs/metrics.json
 AIRFLOW_DAG_ID=churn_pipeline
